--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "request": "^2.88.2"
   },
   "keywords": [],
   "description": ""
