--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "request": "^2.88.2"
+    "nodemon": "^3.0.1",
+    "request": "^2.88.2",
+    "supervisor": "^0.12.0"
   },
   "keywords": [],
   "description": ""
