--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "xhr2": "^0.2.1"
   },
   "keywords": [],
   "description": ""
