--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
     "cheerio": "^1.0.0-rc.12",
@@ -17,6 +18,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "puppeteer": "^20.9.0",
     "request": "^2.88.2",
     "xhr2": "^0.2.1"
   },
