--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "ejs": "^3.1.9",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "fs": "^0.0.1-security",
         "node-geocoder": "^4.2.0",
         "puppeteer": "^20.9.0",
         "request": "^2.88.2",
