--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "module": "^1.2.5",
         "node-geocoder": "^4.2.0",
         "puppeteer": "^20.9.0",
+        "react": "^18.2.0",
+        "react-router-dom": "^6.15.0",
         "request": "^2.88.2",
         "xhr2": "^0.2.1"
     },
