--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "express-session": "^1.17.3",
         "fs": "^0.0.1-security",
         "module": "^1.2.5",
+        "node-fetch": "^3.3.2",
         "node-geocoder": "^4.2.0",
         "puppeteer": "^20.9.0",
         "react": "^18.2.0",
