--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "fs": "^0.0.1-security",
+        "geoip-lite": "^1.4.7",
         "https": "^1.0.0",
+        "js-alert": "^2.0.0",
         "module": "^1.2.5",
         "node-fetch": "^3.3.2",
         "node-geocoder": "^4.2.0",
