fix error and halfway add function

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
         "https": "^1.0.0",
         "js-alert": "^2.0.0",
         "module": "^1.1.0",
+        "node-arp": "^1.0.6",
         "node-fetch": "^2.7.0",
         "node-geocoder": "^4.2.0",
+        "node-macaddress": "^0.2.4",
         "puppeteer": "^20.9.0",
         "react": "^18.2.0",
         "react-router-dom": "^6.15.0",
